feat: logout handler custom